# uwu-engine

./: .gitignore  .gitmodules  LICENSE  README.md
engine/source/: Actor.cpp  Actor.h  BBox.cpp  BBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Component.h  Controller.cpp  Controller.h  Enemy.cpp  Enemy.h  Entity.h  GUINode.h  GameController.h  Grid.cpp  Grid.h  GridNode.h  InputController.cpp  InputController.h  Map.h  Mesh.cpp  Mesh.h  MeshNode.h  Model.cpp  Model.h  Node.cpp  Node.h  Node2D.h  Node3D.h  NodeRegistry.cpp  NodeRegistry.h  ParticleEmitter.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  ResourceManager.cpp  (+27 more)
engine/source/CMakeConfigFiles/: root_directory.h.in
engine/source/assets/imgs/: textbox.png~
engine/source/assets/models/: dcp.mtl  greenCube.mtl  greenPlane.mtl
engine/source/assets/shaders/: gas_particle_shader.fs  mesh_shader.fs  mesh_shader.vsh  model_lighting_shader.fs  model_lighting_shader.vsh  model_lighting_shader_material.fs  model_shader.fs
libs/glad/: glad.lib
libs/glfw/: glfw3.lib
libs/grafica/: grafica.lib
libs/grafica/include/grafica/: root_directory.h  simple_eigen.h
